--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.varunrao.wifisignalstrength.MainActivity">
-
-    <RelativeLayout
-        android:layout_width="344dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:ignore="MissingConstraints">
+    tools:layout_editor_absoluteY="8dp"
+    tools:layout_editor_absoluteX="8dp"
+    tools:ignore="MissingConstraints"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <TextView
             android:layout_width="match_parent"
@@ -20,20 +14,21 @@
             android:textAlignment="center"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="30sp"
+            android:id="@+id/textView2"
+            android:layout_marginTop="25dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:id="@+id/textView2" />
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/signalDisplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="37dp"
+            android:layout_marginTop="17dp"
             android:text="Signal Strength not measured"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:layout_below="@+id/textView2"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:layout_width="100dp"
@@ -43,17 +38,11 @@
             android:text="View All Detected"
             android:id="@+id/goToNext"/>
 
-        <ListView
+        <com.jjoe64.graphview.GraphView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/goToNext"
-            android:layout_alignStart="@+id/signalDisplay"
-            android:id="@+id/RSSIDisplay">
-
-        </ListView>
+            android:layout_height="360dip"
+            android:id="@+id/graph"
+            android:layout_marginTop="200dp"/>
 
 
     </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
